--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
                     </div>
                     <nav class="nav-links">
                         <ul>
-                            <li><a href="about.html">about me</a></li>
+                            <li><a href="about.html">about </a></li>
                             <li><a href="skills.html">skills</a></li>
                             <li><a href="works.html">works</a></li>
                             <li><a href="#">contact</a></li>
@@ -23,9 +23,10 @@
                     </nav>
                 </header>
                     <section class="myWork">
-                        <h1>WORKS
-
-                        </h1>
+                        <div class="title-works">
+                            <h1>WORKS</h1>
+                        </div>
+                        
                         <div>
                             <div>
                                 <img>
@@ -71,7 +72,7 @@
                         </div>
                     
                         <ul>
-                            <li><a href="about.html">about me</a></li>
+                            <li><a href="about.html">about </a></li>
                             <li><a href="skills.html">skills</a></li>
                             <li><a href="works.html">works</a></li>
                             <li><a href="#">contact</a></li>
