site works now yeah

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <link rel="stylesheet" type="text/css" href="hw18-css/home.css">
+            <link rel="stylesheet" type="text/css" href="hw18-css/index.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/ean6mal.css">
             <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
             
             <header>
                 <div class="logo">
-                    <a href="home.html"><img src="../UX_UI_HW_18/hw18-images/placeholderlogo.png" alt="LOGO"/></a>
+                    <a href="index.html"><img src="../UX_UI_HW_18/hw18-images/placeholderlogo.png" alt="LOGO"/></a>
                 </div>
                 <nav class="nav-links">
                     <ul>
