--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             <body> 
                 <header>
                     <div class="logo">
-                        <a href="home.html"><img src="../UX_UI_HW_18/hw18-images/placeholderlogo.png" alt="LOGO"/></a>
+                        <a href="index.html"><img src="../UX_UI_HW_18/hw18-images/placeholderlogo.png" alt="LOGO"/></a>
                     </div>
                     <nav class="nav-links">
                         <ul>
@@ -38,7 +38,7 @@
                                 </p>
                             </div>
                             <div>
-                                <button>
+                                <button type="button">
                                      resume
                                 </button>
                             </div>
