css 2 still confused

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             <body> 
                 <header>
                     <div class="logo">
-                        <a href="index.html"><img src="../UX_UI_HW_18/hw18-images/placeholderlogo.png" alt="LOGO"/></a>
+                        <a href="index.html"><img src="" alt="LOGO"/></a>
                     </div>
                     <nav class="nav-links">
                         <ul>
